radiusを必ずしも4x4を経由しなくてもよいようにした.