@@ -1,3 +1,8 @@
+jar cvf bin/BoardRotate.jar -C bin .
+
+jlink --module-path "C:\programs\BoardRoatate\BoardRotate\bin;C:\Program Files\Java\jdk-22\jmods" --add-modules java.base,java.desktop,app --output custom-jre
+
+
 jpackage ^
   --name BoardRotate ^
   --input bin ^
